--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
