--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-tabs": "^6.0.2",
     "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
