axios error is solved in favorite page

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npx --max-old-space-size=4096 next dev",
+    "build": "npx --max-old-space-size=4096 next build",
+    "start": "npx --max-old-space-size=4096 next start",
     "lint": "next lint"
   },
   "dependencies": {
