--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-tabs": "^6.0.2",
+    "sharp": "^0.33.5",
     "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
